--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -18,9 +18,9 @@ en:
       unconfirmed: "You have to confirm your account before continuing."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Activar tu cuenta Carpooling Automóvil Club de Colombia"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Restablece tu contraseña de Carpooling"
       unlock_instructions:
         subject: "Unlock Instructions"
     omniauth_callbacks:
