--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,134 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  active_admin:
+    dashboard: Dashboard
+    dashboard_welcome:
+      welcome: "Bienvenido al administrador."
+      call_to_action: ""
+    view: "Ver"
+    edit: "Editar"
+    delete: "Eliminar"
+    delete_confirmation: "Estás seguro que quieres borrar este elemento?"
+    new_model: "Nuevos %{model}"
+    edit_model: "Edita %{model}"
+    delete_model: "Elimina %{model}"
+    details: "%{model} Detalles"
+    cancel: "Cancelar"
+    empty: "Vacío"
+    previous: "Anterior"
+    next: "Siguiente"
+    download: "Descargar:"
+    has_many_new: "Agrega Nuevo %{model}"
+    has_many_delete: "Eliminar"
+    has_many_remove: "Remover"
+    filters:
+      buttons:
+        filter: "Filtros"
+        clear: "Limpiar Filtros"
+      predicates:
+        contains: "Contiene"
+        equals: "Igual"
+        starts_with: "Empieza con"
+        ends_with: "Termina"
+        greater_than: "Mayor que"
+        less_than: "Menor que"
+    search_status:
+      headline: "Alcance:"
+      current_filters: "Filtros actuales:"
+      no_current_filters: "Ninguno"
+    status_tag:
+      "yes": "Sí"
+      "no": "No"
+    main_content: "Por favor implementa %{model}#main_content para desplegar contenido."
+    logout: "Logout"
+    powered_by: "Powered by %{active_admin} %{version}"
+    sidebars:
+      filters: "Filtros"
+      search_status: "Estatus de búsqueda"
+    pagination:
+      empty: "No %{model} encontrado"
+      one: "Desplegando <b>1</b> %{model}"
+      one_page: "Desplegando <b>todos los %{n}</b> %{model}"
+      multiple: "Desplegando %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> de <b>%{total}</b> totales"
+      multiple_without_total: "Desplegando %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b>"
+      entry:
+        one: "entrada"
+        other: "entradas"
+    any: "Cualquier"
+    blank_slate:
+      content: "No hay %{resource_name} todavía."
+      link: "Crea un"
+    dropdown_actions:
+      button_label: "Acciones"
+    batch_actions:
+      button_label: "Acciones en lote"
+      default_confirmation: "Estás seguro?"
+      delete_confirmation: "Estás seguro que quieres borrar %{plural_model}?"
+      succesfully_destroyed:
+        one: "Exitosamente eliminado 1 %{model}"
+        other: "Exitosamente eliminados %{count} %{plural_model}"
+      selection_toggle_explanation: "(Selecciona)"
+      link: "Crea un"
+      action_label: "%{title} Seleccionado"
+      labels:
+        destroy: "Eliminar"
+    comments:
+      resource_type: "Tipo de recurso"
+      author_type: "Tipo de autor"
+      body: "Cuerpo"
+      author: "Autor"
+      title: "Comentario"
+      add: "Agregar Comentario"
+      resource: "Recurso"
+      no_comments_yet: "No hay comentarios."
+      author_missing: "Anónimo"
+      title_content: "Comentarios (%{count})"
+      errors:
+        empty_text: "El comentario no se pudo guardar, el texto estaba vacío."
+    devise:
+      username:
+        title: "Usuario"
+      email:
+        title: "Correo"
+      subdomain:
+        title: "Subdominio"
+      password:
+        title: "Password"
+      sign_up:
+        title: "Sign up"
+        submit: "Sign up"
+      login:
+        title: "Login"
+        remember_me: "Remember me"
+        submit: "Login"
+      reset_password:
+        title: "Forgot your password?"
+        submit: "Reset My Password"
+      change_password:
+        title: "Change your password"
+        submit: "Change my password"
+      unlock:
+        title: "Resend unlock instructions"
+        submit: "Resend unlock instructions"
+      resend_confirmation_instructions:
+        title: "Resend confirmation instructions"
+        submit: "Resend confirmation instructions"
+      links:
+        sign_up: "Sign up"
+        sign_in: "Sign in"
+        forgot_your_password: "Forgot your password?"
+        sign_in_with_omniauth_provider: "Sign in with %{provider}"
+        resend_unlock_instructions: "Re-send unlock instructions"
+        resend_confirmation_instructions: "Re-send confirmation instructions"
+    unsupported_browser:
+      headline: "Please note that ActiveAdmin no longer supports Internet Explorer versions 8 or less."
+      recommendation: "We recommend upgrading to the latest <a href=\"http://windows.microsoft.com/ie\">Internet Explorer</a>, <a href=\"https://chrome.google.com/\">Google Chrome</a>, or <a href=\"https://mozilla.org/firefox/\">Firefox</a>."
+      turn_off_compatibility_view: "If you are using IE 9 or later, make sure you <a href=\"http://windows.microsoft.com/en-US/windows7/webpages-look-incorrect-in-Internet-Explorer\">turn off \"Compatibility View\"</a>."
+    access_denied:
+      message: "You are not authorized to perform this action."
+    index_list:
+      table: "Table"
+      block: "List"
+      grid: "Grid"
+      blog: "Blog"
